--- a/configs/raspberrypi/.env.example
+++ b/configs/raspberrypi/.env.example
@@ -1,1 +1,15 @@
-# Template for .env.
+# General
+TZ=America/New_York
+
+# Vaultwarden
+VW_DOMAIN=https://vault.yourdomain.com
+VW_ADMIN_TOKEN=change-me
+
+# Prometheus Exporter
+PVE_HOSTS=192.168.8.11,192.168.8.12
+
+# AdGuard
+ADGUARD_ADMIN_PASSWORD=change-me
+
+# Uptime Kuma
+KUMA_PORT=3001
