Update PVE_HOSTS with placeholder IP addresses

--- a/configs/raspberrypi/.env.example
+++ b/configs/raspberrypi/.env.example
@@ -6,7 +6,7 @@ VW_DOMAIN=https://vault.yourdomain.com
 VW_ADMIN_TOKEN=change-me
 
 # Prometheus Exporter
-PVE_HOSTS=192.168.8.11,192.168.8.12
+PVE_HOSTS=192.168.xxx.xxx,192.168.xxx.xxx
 
 # AdGuard
 ADGUARD_ADMIN_PASSWORD=change-me
