--- a/configs/raspberrypi/docker-compose.yml
+++ b/configs/raspberrypi/docker-compose.yml
@@ -49,7 +49,7 @@ services:
   # Redis for Paperless-ngx
   paperless-redis:
     image: redis:7-alpine
-    container_name: homelab-1-paperless-redis
+    container_name: raspberrypi-paperless-redis-1
     restart: unless-stopped
     command: ["redis-server", "--save", "60", "1", "--loglevel", "warning"]
     volumes:
@@ -58,7 +58,7 @@ services:
   # ---- 3) Dashy - Touchscreen Home ----
   dashy:
     image: lissy93/dashy:latest
-    container_name: homelab-1-dashy
+    container_name: raspberrypi-dashy-1
     restart: unless-stopped
     ports:
       - "8080:80"                # http://<pi-ip>:8080
