--- a/configs/raspberrypi/docker-compose.yml
+++ b/configs/raspberrypi/docker-compose.yml
@@ -71,7 +71,7 @@ services:
   # ---- 4) Glances - Pi/System Monitor ----
   glances:
     image: nicolargo/glances:latest
-    container_name: glances
+    container_name: raspberrypi-glances-1
     restart: unless-stopped
     network_mode: host          # port 61208 of the Pi
     pid: host
