Allow embedded IFrames in Dashboard (Dashy)

--- a/configs/raspberrypi/docker-compose.yml
+++ b/configs/raspberrypi/docker-compose.yml
@@ -64,6 +64,7 @@ services:
       - "4000:8080"                # http://<pi-ip>:8080
     environment:
       - NODE_ENV=production
+      - ALLOW_IFRAME=true
 
   # ---- 4) Glances - Pi/System Monitor ----
   glances:
