Prepare for operational touchscreen.

--- a/configs/raspberrypi/docker-compose.yml
+++ b/configs/raspberrypi/docker-compose.yml
@@ -65,6 +65,8 @@ services:
     environment:
       - NODE_ENV=production
       - ALLOW_IFRAME=true
+    volumes:
+      - ./dashy/conf.yml:/app/public/conf.yml
 
   # ---- 4) Glances - Pi/System Monitor ----
   glances:
